<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressbar_pick_image"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_no_image"
            android:background="@color/colorGray"
            android:contentDescription="@string/image_description"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/showLists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonUploadImage"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/show"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/pick_image_btn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:text="@string/add_image"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/Item_tittle"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:hintEnabled="false"
        android:id="@+id/title_editText_parent"
        android:layout_toEndOf="@id/title_label">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/title_editText"
        android:hint="@string/IMAGE_TITTLE_HINT"
        android:gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/QUANTITY_LABEL"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/title_label"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:hintEnabled="false"
        android:id="@+id/quantity_text_parent"
        android:layout_toEndOf="@id/quantity_label"
        android:layout_below="@+id/title_editText_parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text"
            android:hint="@string/QUANTITY_HINT"
            android:inputType="number"
            android:gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/unit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/Unit_label"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/quantity_label" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:hintEnabled="false"
        android:id="@+id/unit_text_parent"
        android:layout_toEndOf="@id/unit_label"
        android:layout_below="@+id/quantity_text_parent"
        android:layout_marginTop="@dimen/standard_margin">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unit_text"
            android:hint="@string/Unit_label_hint"
            android:gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ORDER"
        android:textSize="34sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:paddingHorizontal="50dp" />

</LinearLayout>